Closed Bug 329841 Opened 20 years ago Closed 20 years ago

misc thebes fixes

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: vlad, Assigned: vlad)

Details

Attachments

(1 file)

A handful of thebes fixes/additions: - use already_AddRefed<> for return types in gfxContext that return gfxASurface*'s and gfxPattern*'s. - add missing NegativeArc implementation - add gfxContext::CurrentPoint - add gfxPangoFonts overload to fix compilation error - add constant-factor multiply and divide to gfxPoint
Comment on attachment 214480 [details] [diff] [review] thebes fixes r+ with comments from irc
Attachment #214480 - Flags: review?(pavlov) → review+
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: