b=329841, misc thebes fixes/additions, r=pav